@@ -55,4 +55,5 @@
       any watchers when a new one was added.
     * MountFS: added support for mounting at the root directory, and for
       mounting over an existing mount.
+    * Added 'getpathurl' and 'haspathurl' methods
 
